--- a/scss/styles.css
+++ b/scss/styles.css
@@ -12,12 +12,12 @@ body {
 }
 
 .header {
-  padding: 20px;
+  padding: 40px 20px 20px 20px;
   text-align: left;
 }
 
 .logo {
-  width: 320px; /* Adjust size as needed */
+  width: 350px; /* Adjust size as needed */
   height: auto;
 }
 
@@ -44,7 +44,7 @@ body {
   text-align: center;
   margin-bottom: 20px;
   font-size: 30px;
-  font-weight: 100;
+  font-weight: 200;
 }
 .hero .hero-text h1::after {
   content: "";
@@ -68,7 +68,7 @@ body {
 .hero .hero-text .button-container .btn-primary {
   background-color: #e77400;
   font-size: 1.5em;
-  font-weight: 100;
+  font-weight: 200;
   color: white;
   border: none;
   padding: 12px 24px;
@@ -87,7 +87,7 @@ body {
   text-align: center;
   margin-bottom: 20px;
   font-size: 30px;
-  font-weight: 100;
+  font-weight: 200;
   position: relative;
 }
 .features .section-title::after {
@@ -117,7 +117,7 @@ body {
   color: #00955e;
   text-align: left;
   margin-bottom: 20px;
-  font-weight: 100;
+  font-weight: 200;
 }
 .features .feature-cards p {
   text-align: left;
@@ -153,7 +153,7 @@ body {
   color: #f9f9f9;
   padding: 10px;
   display: inline-block;
-  font-weight: 100;
+  font-weight: 200;
 }
 .info-box .info-para {
   background-color: #ebf7f5;
@@ -216,12 +216,22 @@ body {
   font-size: 18px;
   color: #575757;
   text-align: center;
+  position: relative;
+}
+.testimonials .testimonial-card .quote-icon {
+  position: absolute;
+  top: 10px;
+  left: -14px;
+  width: 90px;
+  height: auto;
+  opacity: 0.1;
 }
 .testimonials .testimonial-card .author {
   color: #00955e;
   font-size: 1rem;
   line-height: 1.3;
   text-align: center;
+  font-style: italic;
 }
 
 @media (max-width: 768px) {
@@ -296,8 +306,13 @@ body {
 }
 
 @media (max-width: 768px) {
+  .logo {
+    width: 250px;
+    height: auto;
+  }
   .header {
     text-align: center;
+    padding: 20px;
   }
   .hero {
     flex-direction: column;
